--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,18 @@ body {
   background-color: #f5f5f5;
 }
 
+/*Estilo del botón flotante para volver al inicio sin scroll*/
+/*.flotante {
+  display:scroll;
+      position:fixed;
+      bottom:320px;
+      right:0px;
+}
+
+.flotante img {
+  height: 48px;
+}*/
+
 /*Estilo de cabecera*/
 header {
   display: flex;
