--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,12 @@ hr {
   height: 10px;
 }
 
+.centro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*Estilo de clase principal*/
 .principal {
   display: flex;
