--- a/style/style.css
+++ b/style/style.css
@@ -204,6 +204,10 @@ aside img {
 /*Fin estilo de barra lateral izquierda*/
 
 /*Estilo Noticias*/
+.titulo a {
+  text-decoration: none;
+}
+
 .card { /*Estilo de las tarjetas*/
   display: flex;
   flex-direction: column;
@@ -229,23 +233,30 @@ aside img {
 
 .card-columns { /*Cantidad de columnas y espaciado entre las mismas*/
   column-count: 3;
-  column-gap: 1.25rem;
+  column-gap: 1rem;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 312px;
+  border-radius: 15px;
+  padding: 5px;
 }
 /*Fin estilo Noticias*/
 
 /*Estilo de banners informativos centrales*/
-section {
+.informativos {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-section hr {
+.informativos hr {
   background: black;
   height: 5px;
 }
 
-section img {
+.informativos img {
   height: 312px;
   width: 297px;
   border-radius: 25px;
@@ -256,6 +267,8 @@ section img {
 
 /*Estilo Redes RSS*/
 .social_rss {
+  display: flex;
+  justify-content: center;
   padding: 30px;
 }
 /*Fin estilo redes RSS*/
