--- a/style/style.css
+++ b/style/style.css
@@ -208,18 +208,27 @@ aside img {
 padding: 0px 50px 0px 0px;
 }
 
-.titulo a {
-  text-decoration: none;
+.noticias h1 {
+  text-align: center;
+}
+
+.noticias img { /*Estilo de imagen de las tarjetas*/
+  vertical-align: middle;
+  border-style: none;
+  padding: 5px;
+  width: 100%;
+  height: 20rem;
+  border-radius: 10px;
 }
 
 .card { /*Estilo de las tarjetas*/
   display: flex;
   flex-direction: column;
-  background-color: #fff;
+  min-width: 0;
+  word-wrap: break-word;
+  background-clip: border-box;
   text-align: center;
-  padding: 10px 0px;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
+  padding: 5px 0px;
 }
 
 .card-header { /*Cabecera de la tarjeta*/
@@ -238,13 +247,6 @@ padding: 0px 50px 0px 0px;
 .card-columns { /*Cantidad de columnas y espaciado entre las mismas*/
   column-count: 3;
   column-gap: 1rem;
-}
-
-.card-img-top {
-  width: 100%;
-  height: 312px;
-  border-radius: 15px;
-  padding: 5px;
 }
 /*Fin estilo Noticias*/
 
