--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,8 @@
 }
 
 html {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -42,12 +43,14 @@ header {
   justify-content: space-around;
 }
 
-.header_right img { /*Tamaño de Iconos de redes*/
+.header_right img {
+  /*Tamaño de Iconos de redes*/
   height: 36px;
   width: 36px;
 }
 
-hr { /*Linea gradiente de cabecera*/
+hr {
+  /*Linea gradiente de cabecera*/
   background: rgb(0, 0, 0);
   background: linear-gradient(
     90deg,
@@ -205,23 +208,25 @@ aside img {
 
 /*Estilo Noticias*/
 .noticias {
-padding: 0px 50px 0px 0px;
+  padding: 0px 50px 0px 0px;
 }
 
 .noticias h1 {
   text-align: center;
 }
 
-.noticias img { /*Estilo de imagen de las tarjetas*/
-  vertical-align: middle;
-  border-style: none;
+.noticias img {
+  /*Estilo de imagen de las tarjetas*/
+  /* vertical-align: middle; */
+  /* border-style: none; */
   padding: 5px;
   width: 100%;
   height: 20rem;
   border-radius: 10px;
 }
 
-.card { /*Estilo de las tarjetas*/
+.card {
+  /*Estilo de las tarjetas*/
   display: flex;
   flex-direction: column;
   min-width: 0;
@@ -231,20 +236,23 @@ padding: 0px 50px 0px 0px;
   padding: 5px 0px;
 }
 
-.card-header { /*Cabecera de la tarjeta*/
+.card-header {
+  /*Cabecera de la tarjeta*/
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
-.card-footer { /*Pie de tarjeta*/
+.card-footer {
+  /*Pie de tarjeta*/
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 
-.card-columns { /*Cantidad de columnas y espaciado entre las mismas*/
+.card-columns {
+  /*Cantidad de columnas y espaciado entre las mismas*/
   column-count: 3;
   column-gap: 1rem;
 }
@@ -280,26 +288,37 @@ padding: 0px 50px 0px 0px;
 /*Fin estilo redes RSS*/
 
 /*Estilo sección contacto*/
-.contacto { /*Estilo de la sección*/
+.contacto {
+  /*Estilo de la sección*/
   display: flex;
   background-color: #d9d9d9;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.mapa { /*Estilo del mapa*/
+.mapa {
+  /*Estilo del mapa*/
   padding: 20px;
   display: flex;
   flex-direction: column;
 }
 
-.formulario_contacto { /*Estilo de formulario de contacto*/
+.mapa iframe {
+  /*Estilo iframe dentro del div ".mapa"*/
+  width: 600px;
+  height: 250px;
+  border: 0;
+}
+
+.formulario_contacto {
+  /*Estilo de formulario de contacto*/
   padding: 20px;
   text-align: center;
   font-weight: bold;
 }
 
-form { /*Disposición del formulario de contacto*/
+form {
+  /*Disposición del formulario de contacto*/
   display: flex;
   background-color: #212121;
   border-radius: 15px;
@@ -311,7 +330,8 @@ form { /*Disposición del formulario de contacto*/
 
 input,
 textarea,
-select { /*Atributos de etiqueta*/
+select {
+  /*Atributos de etiqueta*/
   border: none;
   outline: none;
   border-radius: 15px;
@@ -323,7 +343,8 @@ select { /*Atributos de etiqueta*/
 
 input:focus,
 textarea:focus,
-select:focus { /*Atributo de foco*/
+select:focus {
+  /*Atributo de foco*/
   background-color: white;
   transform: scale(1.05);
   box-shadow: 13px 13px 100px #969696, -13px -13px 100px #ffffff;
@@ -383,7 +404,8 @@ select:focus { /*Atributo de foco*/
 /*Fin estilo sección contacto*/
 
 /*Estilo Footer*/
-footer { /*Disposición de la sección*/
+footer {
+  /*Disposición de la sección*/
   display: flex;
   font-size: small;
   background-color: black;
