--- a/style/style.css
+++ b/style/style.css
@@ -209,7 +209,7 @@ aside img {
 
 /*Estilo Noticias*/
 .noticias {
-  padding: 0px 50px 0px 0px;
+  padding-right: 50px;
 }
 
 .noticias h1 {
@@ -258,6 +258,35 @@ aside img {
   column-gap: 1rem;
 }
 /*Fin estilo Noticias*/
+
+/*Estilo sección interna "El Partido"*/
+.elPartido {
+  padding: 25px 50px 0px 0px;
+}
+
+.elPartido h2, h3 {
+  text-align: center;
+}
+
+.elPartido a {
+  text-decoration: none;
+}
+
+.elPartido p {
+  text-align: justify;
+}
+
+.elPartido iframe {
+  border: 0;
+  width: 100%;
+}
+
+.elPartido li {
+  padding-left: 3%;
+  list-style:inside;
+  text-align: justify;
+}
+/*Fin estilo sección interna "El Partido"*/
 
 /*Estilo de banners informativos centrales*/
 .informativos {
@@ -410,7 +439,7 @@ footer {
   display: flex;
   font-size: small;
   background-color: black;
-  padding: 5px;
+  padding: 6px;
   justify-content: center;
   align-items: center;
 }
