--- a/style/style.css
+++ b/style/style.css
@@ -66,7 +66,7 @@ hr {
     rgba(41, 166, 167, 1) 100%
   );
   border-radius: 25px;
-  width: 720px;
+  width: 920px;
   height: 10px;
 }
 
@@ -585,4 +585,11 @@ footer p {
 
 @media (max-width: 992px) {
   /*Landscape Tablet Display*/
+}
+
+@media (max-width: 1366px) {
+  /*Monitor HD Display*/
+  hr {
+    width: 750px;
+  }
 }
