--- a/style/apps_Style/styleApps.css
+++ b/style/apps_Style/styleApps.css
@@ -15,6 +15,11 @@ html {
 
 body {
   background-color: #f5f5f5;
+  margin:0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 /*Fin de estilo aplicado a todo el sitio*/
 
@@ -23,22 +28,340 @@ header {
     background-color: black;
     color: white;
     margin: 1%;
-    padding: 2%;
+    padding: 1%;
     text-align: center;
 }
 /*Fin estilo del Header*/
 
 /*Inicio del estilo del MAIN*/
-main img {
-    width: 50%;
-    margin: 1%;
+main {
+  display: flex;
+  justify-content: center;
+  margin: 5%;
 }
+
+/**/
+/*Estilo div INGRESO*/
+.form-container__sign-app-buttons svg {
+  width: 22px;
+  height: auto;
+}
+
+.google svg {
+  width: 18px;
+  height: auto;
+}
+
+.form-container {
+  min-width: 350px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  color: #000000;
+  min-height: 20px;
+  padding: 30px;
+  background-color: #ffffff;
+  border-radius: 20px;
+}
+
+.form-container:focus-within:not(:focus) {
+  box-shadow: 0 0 6px 3px #caedff;
+  -webkit-box-shadow: 0 0 6px 3px #caedff;
+  outline: 1px solid #97dbff;
+}
+
+.form-container p {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 14px;
+}
+
+.top-line {
+  padding-top: 12px;
+}
+
+.form-container__form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.form-container__form input {
+  height: 31px;
+  border: 1px solid #d9d9d9;
+  padding: 4px;
+  font-size: 14px;
+  line-height: 1.65;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.form-container__form input:focus {
+  border-color: #00a6fd;
+  outline: 0;
+  box-shadow: none;
+}
+
+.form-container__register-buttons {
+  display: flex;
+  column-gap: 10px;
+}
+
+.form-container__sign {
+  padding: 8px 20px;
+  font-size: 14px;
+  line-height: 1.65;
+  border-radius: 20px;
+  width: 110px;
+  white-space: nowrap;
+  background-color: #00a6fd;
+  border: none;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.form-container__sign:first-child:active,
+.form-container__sign:first-child:hover {
+  background-color: #0099e9;
+}
+
+.form-container__sign:focus {
+  outline-offset: -2px;
+  outline: none;
+  -webkit-box-shadow: inset 0 0 3px 1px #97dbff;
+  box-shadow: inset 0 0 3px 1px #97dbff;
+}
+
+.forgot {
+  width: auto;
+  padding: 8px 0;
+  background: none;
+  font-weight: 400;
+  color: #428bca;
+  text-decoration: none;
+}
+
+.forgot:hover {
+  text-decoration: underline;
+  color: #4c9dd0;
+}
+
+.form-container__header {
+  padding-bottom: 16px;
+}
+
+.form-container__footer {
+  padding-top: 12px;
+  border-top: 1px solid #cacaca;
+}
+
+.form-container__sign-app-buttons {
+  display: flex;
+  column-gap: 24px;
+}
+
+.form-container__sign-app-buttons button:not(:first-child) {
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-container__sign-app-buttons button:not(:first-child)::before {
+  position: absolute;
+  content: '';
+  width: 120%;
+  height: 2px;
+  background: rgb(187, 187, 187);
+  bottom: 0;
+  opacity: 0;
+}
+
+.form-container__sign-app-buttons button:not(:first-child):hover::before {
+  opacity: 1;
+  transition: 1s;
+}
+
+.form-container__sign-app-buttons button:not(:first-child):focus::before {
+  opacity: 1;
+  background-color: #4b4b4b;
+}
+
+.form-container__sign-app-buttons button:first-child {
+  justify-content: center;
+  min-width: 110px;
+  height: 40px;
+  border: none;
+  background: white;
+  border-radius: 2px;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 1px #b7b7b7;
+  display: flex;
+  align-items: center;
+  color: #4b4b4b;
+  font-size: 13px;
+  column-gap: 15px;
+  cursor: pointer;
+}
+
+.form-container__sign-app-buttons button:first-child:active {
+  background: #eeeeee;
+}
+
+.form-container__sign-app-buttons button:first-child:focus:not(:active) {
+  outline: none;
+  -webkit-box-shadow: inset 0 0 3px 1px #97dbff;
+  box-shadow: inset 0 0 3px 1px #97dbff;
+}
+/*Fin estilo div INGRESO*/
+
+/*Estilo div REGISTRO*/
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 350px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 20px;
+  position: relative;
+}
+
+.title {
+  font-size: 28px;
+  color: royalblue;
+  font-weight: 600;
+  letter-spacing: -1px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+
+.title::before,.title::after {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  left: 0px;
+  background-color: royalblue;
+}
+
+.title::before {
+  width: 18px;
+  height: 18px;
+  background-color: royalblue;
+}
+
+.title::after {
+  width: 18px;
+  height: 18px;
+  animation: pulse 1s linear infinite;
+}
+
+.message, .signin {
+  color: rgba(88, 87, 87, 0.822);
+  font-size: 14px;
+}
+
+.signin {
+  text-align: center;
+}
+
+.signin a {
+  color: royalblue;
+}
+
+.signin a:hover {
+  text-decoration: underline royalblue;
+}
+
+.flex {
+  display: flex;
+  width: 100%;
+  gap: 6px;
+}
+
+.form label {
+  position: relative;
+}
+
+.form label .input {
+  width: 100%;
+  padding: 10px 10px 20px 10px;
+  outline: 0;
+  border: 1px solid rgba(105, 105, 105, 0.397);
+  border-radius: 10px;
+}
+
+.form label .input + span {
+  position: absolute;
+  left: 10px;
+  top: 15px;
+  color: grey;
+  font-size: 0.9em;
+  cursor: text;
+  transition: 0.3s ease;
+}
+
+.form label .input:placeholder-shown + span {
+  top: 15px;
+  font-size: 0.9em;
+}
+
+.form label .input:focus + span,.form label .input:valid + span {
+  top: 30px;
+  font-size: 0.7em;
+  font-weight: 600;
+}
+
+.form label .input:valid + span {
+  color: green;
+}
+
+.submit {
+  border: none;
+  outline: none;
+  background-color: royalblue;
+  padding: 10px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 16px;
+  transform: .3s ease;
+}
+
+.submit:hover {
+  background-color: rgb(56, 90, 194);
+}
+
+@keyframes pulse {
+  from {
+    transform: scale(0.9);
+    opacity: 1;
+  }
+
+  to {
+    transform: scale(1.8);
+    opacity: 0;
+  }
+}
+/*Fin estilo div REGISTRO*/
+/**/
 
 /*Fin del estilo del MAIN*/
 
 /*Inicio estilo del Footer*/
 footer {
   display: flex;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
   justify-content: center;
   align-items: center;
   margin: 1%;
