--- a/style/apps_Style/styleApps.css
+++ b/style/apps_Style/styleApps.css
@@ -15,7 +15,6 @@ html {
 
 body {
   background-color: #f5f5f5;
-  margin:0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -25,9 +24,9 @@ body {
 
 /*Inicio estilo del Header*/
 header {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
-    margin: 1%;
+    margin: 0;
     padding: 1%;
     text-align: center;
 }
@@ -352,7 +351,66 @@ main {
   }
 }
 /*Fin estilo div REGISTRO*/
-/**/
+
+/*Inicio estilo HOME appARM*/
+/*Inicio estilo barra de navegación lateral*/
+
+
+/*Fin estilo barra de navegación lateral*/
+
+/*Inicio estilo CARDS del HOME*/
+.cards {
+  display: grid;
+  grid-template-columns: auto auto;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.cards .red {
+  background-color: #f43f5e;
+}
+
+.cards .blue {
+  background-color: #3b82f6;
+}
+
+.cards .green {
+  background-color: #22c55e;
+}
+
+.cards .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 100px;
+  width: 250px;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  transition: 400ms;
+}
+
+.cards .card p.tip {
+  font-size: 1em;
+  font-weight: 700;
+}
+
+.cards .card p.second-text {
+  font-size: .7em;
+}
+
+.cards .card:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.cards:hover > .card:not(:hover) {
+  filter: blur(10px);
+  transform: scale(0.9, 0.9);
+}
+/*Fin estilo CARDS del HOME*/
+/*Fin estilo HOME appARM*/
 
 /*Fin del estilo del MAIN*/
 
@@ -364,8 +422,7 @@ footer {
   bottom: 0;
   justify-content: center;
   align-items: center;
-  margin: 1%;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   padding: 1%;
 }
 
