--- a/style/apps_Style/styleApps.css
+++ b/style/apps_Style/styleApps.css
@@ -24,11 +24,15 @@ body {
 
 /*Inicio estilo del Header*/
 header {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    margin: 0;
-    padding: 1%;
-    text-align: center;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  margin: 0;
+  padding: 1%;
+  text-align: center;
+}
+
+h2 {
+  margin: 1%;
 }
 /*Fin estilo del Header*/
 
@@ -92,9 +96,10 @@ main {
   line-height: 1.65;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -webkit-transition: border-color ease-in-out 0.15s,
+    box-shadow ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 
 .form-container__form input:focus {
@@ -174,7 +179,7 @@ main {
 
 .form-container__sign-app-buttons button:not(:first-child)::before {
   position: absolute;
-  content: '';
+  content: "";
   width: 120%;
   height: 2px;
   background: rgb(187, 187, 187);
@@ -242,7 +247,8 @@ main {
   padding-left: 30px;
 }
 
-.title::before,.title::after {
+.title::before,
+.title::after {
   position: absolute;
   content: "";
   height: 16px;
@@ -264,7 +270,8 @@ main {
   animation: pulse 1s linear infinite;
 }
 
-.message, .signin {
+.message,
+.signin {
   color: rgba(88, 87, 87, 0.822);
   font-size: 14px;
 }
@@ -314,7 +321,8 @@ main {
   font-size: 0.9em;
 }
 
-.form label .input:focus + span,.form label .input:valid + span {
+.form label .input:focus + span,
+.form label .input:valid + span {
   top: 30px;
   font-size: 0.7em;
   font-weight: 600;
@@ -332,7 +340,7 @@ main {
   border-radius: 10px;
   color: #fff;
   font-size: 16px;
-  transform: .3s ease;
+  transform: 0.3s ease;
 }
 
 .submit:hover {
@@ -354,8 +362,95 @@ main {
 
 /*Inicio estilo HOME appARM*/
 /*Inicio estilo barra de navegación lateral*/
+header,
+.nav,
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.nav {
+  position: relative;
+  background-color: #fff;
+  padding: 8px;
+  transition: 0.5s;
+  border-radius: 50px;
+  overflow: hidden;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
 
+.menu {
+  margin: 0;
+  padding: 0;
+  width: 0;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+.nav input:checked ~ .menu {
+  width: 450px;
+}
+
+.menu li {
+  list-style: none;
+  margin: 0 10px;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #666;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: 0.5s;
+}
+
+.menu li a:hover {
+  color: #161919;
+}
+
+.nav input {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.nav span {
+  position: absolute;
+  left: 13px;
+  width: 30px;
+  height: 4px;
+  border-radius: 50px;
+  background-color: #666;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.nav input:checked ~ span {
+  background-color: #f974a1;
+}
+
+.nav span:nth-child(2) {
+  transform: translateY(-8px);
+}
+
+.nav input:checked ~ span:nth-child(2) {
+  transform: translateY(0) rotate(-45deg);
+}
+.nav span:nth-child(3) {
+  transform: translateY(8px);
+}
+
+.nav input:checked ~ span:nth-child(3) {
+  transform: translateY(0) rotate(45deg);
+}
+
+/*Display emergente*/
+#acercaDe:hover::after {
+  content: "Oficina Virtual - v1.00 rev35";
+}
+/*Fin display emergente*/
 /*Fin estilo barra de navegación lateral*/
 
 /*Inicio estilo CARDS del HOME*/
@@ -398,7 +493,7 @@ main {
 }
 
 .cards .card p.second-text {
-  font-size: .7em;
+  font-size: 0.7em;
 }
 
 .cards .card:hover {
@@ -410,6 +505,7 @@ main {
   transform: scale(0.9, 0.9);
 }
 /*Fin estilo CARDS del HOME*/
+
 /*Fin estilo HOME appARM*/
 
 /*Fin del estilo del MAIN*/
